lessons/082/example-6/2-foo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foo
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: aputrabay/lesson-082:v0.1.6
        args:
        - -name
        - foo
        - -port
        - "5698"
        ports:
        - name: http
          containerPort: 5698
          protocol: TCP
