lessons/082/example-6/2-foo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: foo
  name: foo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5698
  selector:
    app: foo
