lessons/082/example-6/6-bar-external.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: bar-external
  namespace: foo
spec:
  type: ExternalName
  externalName: bar.bar.svc.cluster.local
